feat(swagger): add phonenumber routes
