# apps/swagger/src/routes/index.ts
@@ -1,2 +1,3 @@
 export { router as apidocsRouter } from './apidocs';
 export { router as messagesRouter } from './message';
+export { router as phoneNumberRouter } from './phoneNumber';
